# battle_sim

./: .gitignore  CMakeLists.txt  README.md
include/: battle_manager.hpp  fighter.hpp  team.hpp
src/: battle_manager.cpp  fighter.cpp  main.cpp  team.cpp
